gcc/testsuite/rust/rustc/ui/codemap_tests/coherence-overlapping-inherent-impl-trait.rs
#![allow(dead_code)]

trait C {}
impl dyn C { fn f() {} } // { dg-error ".E0592." "" { target *-*-* } }
impl dyn C { fn f() {} }
fn main() { }

